--- a/Back_1/.github/workflows/backend.yml
+++ b/Back_1/.github/workflows/backend.yml
@@ -3,9 +3,9 @@ name: Backend CI/CD
 # Trigger on push to main or pull requests
 on:
   push:
-    branches: [ "main" ]
+    branches: [ "main", "master" ]
   pull_request:
-    branches: [ "main" ]
+    branches: [ "main", "master" ]
 
 jobs:
   # JOB 1: Continuous Integration (Test)
