--- a/.github/workflows/backend.yml
+++ b/.github/workflows/backend.yml
@@ -1,16 +1,18 @@
 name: Backend CI/CD
 
-# Trigger on push to main or pull requests
 on:
   push:
-    branches: [ "main", "master" ]
+    branches: [ "main" ]
   pull_request:
-    branches: [ "main", "master" ]
+    branches: [ "main" ]
 
 jobs:
-  # JOB 1: Continuous Integration (Test)
+  # JOB 1: TEST
   ci:
     runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: ./Back_1  # <--- CRITICAL: Tells GitHub code is in subfolder
     steps:
       - name: Checkout repo
         uses: actions/checkout@v4
@@ -26,13 +28,13 @@ jobs:
       - name: Run Backend Tests
         run: npm test
         env:
-          MONGO_URI: "" # Force Mock Mode for testing
+          MONGO_URI: "" # Force Mock Mode
 
-  # JOB 2: Continuous Deployment (Deploy)
+  # JOB 2: DEPLOY
   cd:
     runs-on: ubuntu-latest
-    needs: ci # Only run if tests pass
-    if: github.ref == 'refs/heads/main' # Only deploy from main branch
+    needs: ci
+    if: github.ref == 'refs/heads/main'
     steps:
       - name: Deploy to Render
         uses: johnbeynon/render-deploy-action@v0.0.8
