--- a/.github/workflows/backend.yml
+++ b/.github/workflows/backend.yml
@@ -28,10 +28,48 @@ jobs:
         env:
           MONGO_URI: "" # Force Mock Mode for testing
 
-  # JOB 2: Continuous Deployment (Deploy)
+  # JOB 2: Dynamic Testing (k6)
+    performance-testing:
+      runs-on: ubuntu-latest
+      needs: ci # Run only if unit tests pass
+      steps:
+        - name: Checkout repo
+          uses: actions/checkout@v4
+
+        - name: Setup Node.js
+          uses: actions/setup-node@v4
+          with:
+            node-version: 18
+
+        - name: Install dependencies
+          run: npm install
+
+        - name: Start API in Background
+          # Backend uses 100-event mockData.js because MONGO_URI is empty
+          run: npm start &
+          env:
+            PORT: 8080
+            MONGO_URI: ""
+
+        - name: Wait for Server
+          run: npx wait-on http://localhost:8080/search
+
+        - name: Run Load Tests
+          uses: grafana/k6-action@v0.3.0
+          with:
+            filename: load_tests.js
+            flags: --env API_URL=http://localhost:8080
+
+        - name: Run Spike Tests
+          uses: grafana/k6-action@v0.3.0
+          with:
+            filename: spike_tests.js
+            flags: --env API_URL=http://localhost:8080
+
+  # JOB 3: Continuous Deployment (Deploy)
   cd:
     runs-on: ubuntu-latest
-    needs: ci # Only run if tests pass
+    needs: [ci, performance-testing] # Only run if tests pass
     if: github.ref == 'refs/heads/main' # Only deploy from main branch
     steps:
       - name: Deploy to Render
