--- a/.github/workflows/backend.yml
+++ b/.github/workflows/backend.yml
@@ -34,6 +34,9 @@ jobs:
   performance-testing:
     runs-on: ubuntu-latest
     needs: ci # Run only if unit tests pass
+    defaults:
+      run:
+        working-directory: ./Back_1  # <--- CRITICAL: Tells GitHub code is in subfolder
     steps:
       - name: Checkout repo
         uses: actions/checkout@v4
