--- a/.github/workflows/backend.yml
+++ b/.github/workflows/backend.yml
@@ -59,17 +59,18 @@ jobs:
       - name: Wait for Server
         run: npx wait-on http://127.0.0.1:8080/search
 
+      - name: Install k6
+        run: |
+          sudo gpg --no-default-keyring --keyring /usr/share/keyrings/k6-archive-keyring.gpg --keyserver hkp://keyserver.ubuntu.com:80 --recv-keys C5AD17C747E3415A3642D57D77C6C491D6AC1D69
+          echo "deb [signed-by=/usr/share/keyrings/k6-archive-keyring.gpg] https://dl.k6.io/deb stable main" | sudo tee /etc/apt/sources.list.d/k6.list
+          sudo apt-get update
+          sudo apt-get install k6
+
       - name: Run Load Tests
-        uses: grafana/k6-action@v0.3.0
-        with:
-          filename: Back_1/tests/load_tests.js
-          flags: --env API_URL=http://host.docker.internal:8080
+        run: k6 run tests/load_tests.js --env API_URL=http://127.0.0.1:8080
 
       - name: Run Spike Tests
-        uses: grafana/k6-action@v0.3.0
-        with:
-          filename: Back_1/tests/spike_tests.js
-          flags: --env API_URL=http://host.docker.internal:8080
+        run: k6 run tests/spike_tests.js --env API_URL=http://127.0.0.1:8080
 
   # JOB 3: Continuous Deployment (Deploy)
   cd:
